--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,6 @@ jobs:
       - run:
           name: e2e tests
           command: |
-            yarn run cypress run
+            npm run cypress run
       - store_artifacts:
           path: /root/project/cypress/videos/
