--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,7 @@ jobs:
       - run:
           name: e2e tests
           command: |
-            cypress run
+            npm install
+            yarn run cypress run
       - store_artifacts:
           path: /root/project/cypress/videos/
